# retail-iq

./: .env.example  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  CRAWL-STATUS.md  GITHUB-SETUP.md  HANDOVER.md  LICENSE.md  README.md  TEST-REPORT-2026-05-04.md  pyproject.toml
.githooks/: pre-push
admin/: package-lock.json  tailwind.config.ts
api/: main.py
frontend-designs/: README.md  style-1-apple-hig.html  style-2-gamified.html  style-3-pro-dashboard.html
generated-scripts/: iphone-17-pro_business_5min.md  iphone-17-pro_business_5min_DRAFT.md  iphone-17-pro_business_5min_FAB.md  iphone-17-pro_flash_1min.md  test3_end-to-end-ingest-simulation.md
raw/: _embeddings-index.json  _relevance-scores-2026-W18.json  _relevance-scores-2026-W19.json
scripts/: __init__.py  backfill_gate3.py  backfill_relevance.py  cost_report.py  embedding_index.py  fetch_apple.py  fetch_apple_rest.py  fetch_reviews.py  gate4_applier.py  gate4_lint.py  gate4_pipeline.py  gate4_proposer.py  gate4_queue.py  gate4_router.py  generate_weekly_digest.py  ingest_agent.py  install-hooks.sh  lint.py  llm_client.py  pre_w2_crawler.py  relevance_scorer.py  review_queue.py  test_hash_dedup.py  utils.py  write_zh_summaries.py  yaml_mini.py
tests/: test_backfill_gate3.py  test_cost_report.py  test_embedding_index.py  test_gate3_relevance.py  test_gate4_applier.py  test_gate4_diff_merge.py  test_gate4_lint.py  test_gate4_only_mode.py  test_gate4_pipeline.py  test_gate4_proposer.py  test_gate4_queue.py  test_gate4_router.py  test_ingest_filters.py  test_llm_client.py  test_review_queue.py  (+2 more)
(+263 files in other folders)
